# rotosport-core

./: Cargo.toml  README.md
contracts/factory/: Cargo.toml  README.md
contracts/factory/examples/: factory_schema.rs
contracts/factory/src/: contract.rs  migration.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/factory/tests/: factory_helper.rs  integration.rs
contracts/pair/: Cargo.toml  README.md
contracts/pair/examples/: pair_schema.rs
contracts/pair/src/: contract.rs  error.rs  migration.rs  mock_querier.rs  state.rs  testing.rs
contracts/pair/tests/: integration.rs
contracts/pair_concentrated/: Cargo.toml  README.md
contracts/pair_concentrated/examples/: pair_concentrated_schema.rs
contracts/pair_concentrated/src/: contract.rs  error.rs  migration.rs  queries.rs  state.rs  utils.rs
contracts/pair_concentrated/src/math/: math_decimal.rs  signed_decimal.rs
contracts/pair_concentrated/tests/: helper.rs  pair_concentrated_integration.rs  pair_concentrated_simulation.rs
contracts/pair_roto_xroto/: Cargo.toml  README.md
contracts/pair_roto_xroto/.cargo/: config
contracts/pair_roto_xroto/examples/: pair_roto_xroto_schema.rs
contracts/pair_roto_xroto/src/: contract.rs  lib.rs  state.rs
contracts/pair_roto_xroto/tests/: integration.rs
contracts/pair_stable/: Cargo.toml  README.md
contracts/pair_stable/src/: contract.rs  error.rs  math.rs  migration.rs  mock_querier.rs  state.rs  testing.rs  utils.rs
contracts/pair_stable/tests/: helper.rs  integration.rs  stablepool_tests.rs
contracts/periphery/native-coin-wrapper/: Cargo.toml  README.md
contracts/periphery/native-coin-wrapper/src/: contract.rs  state.rs
contracts/periphery/native-coin-wrapper/tests/: integration.rs
contracts/periphery/native_coin_registry/: Cargo.toml  README.md
contracts/periphery/native_coin_registry/src/: contract.rs  state.rs
contracts/periphery/native_coin_registry/tests/: integration.rs
contracts/periphery/oracle/: Cargo.toml  README.md
contracts/periphery/oracle/examples/: oracle_schema.rs
contracts/periphery/oracle/src/: contract.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/periphery/oracle/tests/: integration.rs
contracts/router/: Cargo.toml  README.md
contracts/router/examples/: router_schema.rs
contracts/router/src/: contract.rs  operations.rs  state.rs
contracts/router/src/testing/: mock_querier.rs  tests.rs
contracts/router/tests/: factory_helper.rs  router_integration.rs
contracts/token/: Cargo.toml  README.md
contracts/token/examples/: token_schema.rs
contracts/token/src/: contract.rs
contracts/tokenomics/generator/: Cargo.toml  README.md
contracts/tokenomics/generator/examples/: generator_schema.rs
contracts/tokenomics/generator/src/: contract.rs  error.rs  migration.rs  state.rs
contracts/tokenomics/generator/tests/: integration.rs
contracts/tokenomics/generator/tests/test_utils/: controller_helper.rs  delegation_helper.rs  escrow_helper.rs  mod.rs
contracts/tokenomics/maker/: Cargo.toml  README.md
contracts/tokenomics/maker/examples/: maker_schema.rs
contracts/tokenomics/maker/src/: contract.rs  error.rs  migration.rs  state.rs  testing.rs  utils.rs
contracts/tokenomics/maker/tests/: integration.rs
contracts/tokenomics/staking/: Cargo.toml  README.md
contracts/tokenomics/staking/examples/: staking_schema.rs
contracts/tokenomics/staking/src/: contract.rs  state.rs
contracts/tokenomics/staking/tests/: integration.rs
contracts/tokenomics/vesting/: Cargo.toml  README.md
contracts/tokenomics/vesting/examples/: vesting_schema.rs
contracts/tokenomics/vesting/src/: contract.rs  migration.rs  state.rs  testing.rs
contracts/tokenomics/vesting/tests/: integration.rs
contracts/tokenomics/xroto_token/: Cargo.toml  README.md
contracts/tokenomics/xroto_token/.cargo/: config
contracts/tokenomics/xroto_token/examples/: xroto_token_schema.rs
contracts/tokenomics/xroto_token/src/: contract.rs  state.rs  testing.rs
contracts/whitelist/: Cargo.toml
contracts/whitelist/src/: contract.rs
scripts/: README.md  contract_version.ts  deploy_core.ts  deploy_pools.ts  deploy_token.ts  helpers.ts  migrate.ts
scripts/chain_configs/: localterra.json  phoenix-1.json  pisco-1.json
scripts/tests/: lib.ts  test_generator.ts  test_router.ts  tests.ts
scripts/types.d/: rotosports_deploy_interfaces.ts
templates/generator_proxy_template/: Cargo.toml  README.md
templates/generator_proxy_template/examples/: generator_proxy_template_schema.rs
templates/generator_proxy_template/src/: contract.rs  state.rs
templates/pair_bonded_template/: Cargo.toml  README.md
templates/pair_bonded_template/examples/: pair_bonded_template_schema.rs
templates/pair_bonded_template/src/: contract.rs  lib.rs
