[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_stable",
    "contracts/pair_concentrated",
    "contracts/pair_roto_xroto",
    "contracts/router",
    "contracts/token",
    "contracts/whitelist",
    "templates/*",
    "contracts/tokenomics/generator",
    "contracts/tokenomics/maker",
    "contracts/tokenomics/staking",
    "contracts/tokenomics/vesting",
    "contracts/tokenomics/xroto_token",
    "contracts/periphery/*",
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[patch.'https://github.com/rotosports/rotosports-core']
rotosports = { path = "packages/rotosports" }

