[package]
name = "rotosports-pair-concentrated"
version = "1.2.4"
authors = ["Rotosports"]
edition = "2021"
description = "The Rotosports concentrated liquidity pair"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
rotosports = { path = "../../packages/rotosports", default-features = false }
rotosports-factory = { path = "../factory", features = ["library"] }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = "1.0"
cosmwasm-schema = "1.1"
itertools = "0.10"
cw-utils = "0.15"

[dev-dependencies]
rotosports-token = { path = "../token" }
cw-multi-test = "0.15"
rotosports-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
rotosports-native-coin-registry = { path = "../periphery/native_coin_registry" }
