[package]
name = "rotosports-pair-stable"
version = "2.1.2"
authors = ["Rotosports"]
edition = "2021"
description = "The Rotosports stableswap pair contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
rotosports = { path = "../../packages/rotosports", default-features = false }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
itertools = "0.10"
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"

[dev-dependencies]
anyhow = "1.0"
proptest = "1.0.0"
sim = { git = "https://github.com/rotosports-fi/rotosports-sims", branch = "main", package = "sim" }
rotosports-token = { path = "../token" }
cw-multi-test = "0.15"
rotosports-factory = { path = "../factory" }
derivative = "2.2"
prost = "0.11.5"
rotosports-native-coin-registry = { path = "../periphery/native_coin_registry" }
