[package]
name = "rotosports-oracle"
version = "2.1.1"
authors = ["Rotosports"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
cw2 = "0.15"
cw20 = "0.15"
rotosports = { path = "../../../packages/rotosports", default-features = false }
cosmwasm-schema = { version = "1.1" }

[dev-dependencies]
rotosports-token = { path = "../../token" }
rotosports-factory = { path = "../../factory" }
rotosports-pair = { path = "../../pair" }
rotosports-pair-stable = { path = "../../pair_stable" }
cw-multi-test = "0.15"
itertools = "0.10"
anyhow = "1.0"
rotosports-native-coin-registry = { path = "../../periphery/native_coin_registry" }
