[package]
name = "rotosports-generator"
version = "2.3.0"
authors = ["Rotosports"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]

cw-storage-plus = "0.15"
cw1-whitelist = { version = "0.15", features = ["library"] }
thiserror = { version = "1.0" }
rotosports-governance = { git = "https://github.com/rotosports-fi/rotosports-governance", branch = "main" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-std = "1.1"
cw2 = "0.15"
cw20 = "0.15"
rotosports = { path = "../../../packages/rotosports" }
cosmwasm-schema = "1.1"
[dev-dependencies]


generator-controller = { git = "https://github.com/rotosports-fi/rotosports-governance", branch = "main" }
cw-multi-test = "0.15"
rotosports-token = { path = "../../token" }
rotosports-vesting = { path = "../vesting" }
rotosports-staking = { path = "../staking" }
rotosports-factory = { path = "../../factory" }
rotosports-pair = { path = "../../pair" }
rotosports-pair-stable = { path = "../../pair_stable" }
rotosports-whitelist = { path = "../../whitelist" }
anyhow = "1"
voting-escrow = { git = "https://github.com/rotosports-fi/rotosports-governance", branch = "main" }
voting-escrow-delegation = { git = "https://github.com/rotosports-fi/rotosports-governance", branch = "main" }
rotosports-nft = { git = "https://github.com/rotosports-fi/rotosports-governance", branch = "main" }
cw721-base = { version = "0.15", features = ["library"] }


generator-proxy-to-vkr = { git = "https://github.com/rotosports-fi/roto-generator-proxy-contracts", branch = "main" }
valkyrie = { git = "https://github.com/rotosports-fi/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
valkyrie-lp-staking = { git = "https://github.com/rotosports-fi/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
valkyrie-vp = { git = "https://github.com/rotosports-fi/valkyrieprotocol", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
rotosports-native-coin-registry = { path = "../../periphery/native_coin_registry" }
